Add config menu using cloth-config
Also updated mappings